colors and overflow fixes

--- a/app/components/searchForm/searchForm.scss
+++ b/app/components/searchForm/searchForm.scss
@@ -71,7 +71,7 @@
     &.social__search{
       &::placeholder{
         font-size: 14px;
-        color: #000;
+        color: #9f9f9f;
       }
     }
 
@@ -527,7 +527,7 @@
         position: relative;
         letter-spacing: 0.1px;
         max-width: none;
-        
+
         @media screen and (max-width: 450px) {
           padding-right: 25px;
         }
@@ -568,7 +568,7 @@
       }
     }
   }
-  
+
   .radio-alt {
     margin: 10px 0;
     font-family: $PFDinTextPro;
@@ -661,7 +661,7 @@
     right: 10px;
   }
 
-  
+
 
   @media screen and (max-width: 1280px) {
     .search__filter {
@@ -824,7 +824,7 @@
 
     &__filter {
       display: none;
-      
+
       @media (max-width: 1280px) {
         margin-top: 0;
       }
@@ -840,7 +840,7 @@
         height: 100%;
         z-index: 99999;
       }
-      
+
     }
   }
 
@@ -899,7 +899,7 @@
 
     @media (max-width: 900px) {
       padding: 0;
-      margin-top: 22px; 
+      margin-top: 22px;
     }
 
     @media (max-width: 600px) {
@@ -932,7 +932,7 @@
       @media (max-width: 600px) {
         padding: 39px 13px 32px;
       }
-      
+
     }
 
     &__wrapper {
@@ -959,7 +959,7 @@
       }
 
     }
-    
+
     &__col {
       @media (max-width: 900px) {
         display: block;
@@ -973,7 +973,7 @@
       padding: 0;
       border: none;
     }
-    
+
     &__col_two {
       margin-left: 70px;
 
@@ -1024,18 +1024,18 @@
             }
           }
         }
-        
+
         ul {
           background-color: #fff;
           max-height: 224px;
           overflow-x: hidden;
           overflow-y: auto;
-          
+
           @media (min-width: 601px) and (max-width: 900px) {
             max-height: 490px;
           }
         }
-        
+
         &.active {
           .selectbox__arrow {
             background-color: #fff;
@@ -1059,7 +1059,7 @@
         display: block;
         width: 100%;
       }
-    
+
     }
 
     &__field-input {
@@ -1080,11 +1080,11 @@
         font-size: 24px!important;
         line-height: 70px;
       }
-      
+
       @media (max-width: 600px) {
         margin-top: 5px;
       }
-      
+
       @media (max-width: 900px) {
         display: block;
         width: 100%;
@@ -1116,7 +1116,7 @@
       right: 11px;
       height: 20px;
       width: 20px;
-      
+
       @media (max-width:900px) {
         display: block;
       }
@@ -1135,62 +1135,62 @@
   float: right;
   padding-top: 0;
   margin-right: 0;
-  
+
   @media (max-width: 1280px) {
     width: auto;
   }
-  
+
   @media (max-width: 900px) {
     width: 100%;
   }
-  
+
   @media (max-width: 700px) {
     margin-top: 0;
   }
-  
+
   .link {
     color: #fff;
     text-decoration: none;
-    
+
     @media (max-width: 450px) {
       padding: 13px 12px;
     }
   }
-  
+
   .search__filter {
     font-size: 0;
-    
+
     @media (max-width: 1280px) {
       margin-top: 0;
     }
   }
-  
+
   .btn-close {
     position: absolute;
     display: none;
     top: 10px;
     right: 10px;
-    
+
     @media (max-width: 700px) {
       display: block;
     }
   }
-  
+
   .tags {
     margin-top: -2px;
-    
+
     @media (max-width: 1280px) {
       width: 1060px;
     }
-    
+
     @media (max-width: 1140px) {
       width: 944px;
     }
-    
+
     @media (max-width: 1020px) {
       width: 821px;
     }
-    
+
     @media (max-width: 900px) {
       width: 100%;
     }
