--- a/app/components/services_net/services_net.scss
+++ b/app/components/services_net/services_net.scss
@@ -25,7 +25,7 @@
           bottom: 0;
           height: auto;
 		  z-index: 99999;
-          
+
           @media (max-width: 900px) {
 		    position: fixed;
             height: 560px;
@@ -33,7 +33,7 @@
             right: 0;
             margin: auto;
 		  }
-          
+
 		  @media (max-width: 640px) and (min-width: 601px) {
 		    height: 360px;
 		  }
@@ -72,7 +72,7 @@
 
 		@media (max-width: 600px) {
 	    margin-top: 4px;
-		}	
+		}
 
 	}
 
@@ -86,8 +86,8 @@
 
 		@media (max-width: 600px) {
 	    margin-top: 28px;
-		}	
-		
+		}
+
 
 		span,
 		.buttons-set {
@@ -96,7 +96,7 @@
 
 	  	@media (max-width: 900px) {
 				display: block;
-	  	}	
+	  	}
 		}
 
 		span {
@@ -111,10 +111,10 @@
 				font-size: 30px;
 		    line-height: 34px;
 	  	}
-			
+
 	  	@media (max-width: 900px) {
 		    margin-right: 0;
-	  	}	
+	  	}
 		}
 
 		.buttons-set {
@@ -129,7 +129,7 @@
 			    font-size: 24px;
 			    line-height: 44px;
 			    padding: 11px 26px;
-		  	}	
+		  	}
 
 		  	@media (max-width: 600px) {
 		  		padding: 11px 8px;
@@ -158,31 +158,31 @@
 			margin-bottom: 45px;
 		}
 	}
-  
+
   //.slide-arrows {
   //  position: absolute;
   //  width: 100%;
   //  z-index: 1;
   //  top: 50%;
-  //  
+  //
   //  @media (min-width: 901px) {
   //    display: none;
   //  }
-  //  
+  //
   //  &__arrow {
   //    position: relative;
-  //    
+  //
   //    &_left {
   //      left: -36px;
-  //      
+  //
   //      @media (max-width: 580px) {
   //        left: -18px;
   //      }
   //    }
-  //    
+  //
   //    &_right {
   //      right: -36px;
-  //      
+  //
   //      @media (max-width: 580px) {
   //        right: -18px;
   //      }
@@ -205,7 +205,7 @@
 
 	  	@media (max-width: 900px) and (min-width: 601px) {
     		font-size: 30px;
-	  	}		
+	  	}
 
 	  	&::before {
 		  	@media (max-width: 900px) and (min-width: 601px) {
@@ -214,17 +214,17 @@
 			    border-top: 9px solid transparent;
 			    border-left: 10px solid #0d46a1;
 			    border-bottom: 9px solid transparent;
-		  	}			  		
+		  	}
 	  	}
 		}
 	}
 
 	&__mask {
 		display: none;
-		position: fixed; 
-		top: 0; 
-		left: 0; 
-		width: 100%; 
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
 		bottom: 0;
 		background-color: rgba(0, 0, 0, .5);
 		z-index: 9999;
@@ -277,9 +277,9 @@
 
   @media (max-width: 900px) {
     overflow-x: scroll;
-    overflow-y: hidden;		
+    overflow-y: hidden;
   }
-	
+
   @media (max-width: 900px) {
     margin-top: 13px;
   }
@@ -326,6 +326,7 @@
 
 	&__row {
 		padding: 18px 0 14px;
+    display: flex;
     border-bottom: 1px solid #d5d5d5;
 
     @media (max-width: 900px) and (min-width: 601px) {
@@ -342,10 +343,10 @@
     @media (max-width: 900px) {
 			padding-right: 55px;
     }
-		
+
     &_left {
 	    width: 63.5%;
-      white-space: nowrap;
+      display: flex;
 
       @media (max-width: 1140px) {
 				width: 69.5%;
@@ -386,6 +387,7 @@
 
 	&__caption {
 		padding-bottom: 12px;
+    display: flex;
     font-family: $PFDinTextPro;
     border-bottom: 3px solid #d5d5d5;
 
@@ -407,12 +409,12 @@
 				font-size: 28px;
 		    line-height: 32px;
       }
-		
+
       @media (max-width: 580px) {
 				font-size: 16px;
 				letter-spacing: -.7px;
       }
-			
+
     }
 	}
 
@@ -447,6 +449,7 @@
 		display: inline-block;
     vertical-align: top;
 		color: $color-link;
+    padding-right: 10px;
     text-decoration: none;
     letter-spacing: -.4px;
     white-space: normal;
@@ -461,7 +464,7 @@
     @media (max-width: 900px) and (min-width: 601px) {
 			font-size: 24px;
     }
-		
+
     @media (max-width: 580px) {
       width: 100%;
     }
@@ -489,7 +492,7 @@
 		  @media (max-width: 600px) {
 				min-width: 1000px;
 		  }
-			
+
 		  @media (max-width: 580px) {
 		    min-width: 800px;
 		  }
@@ -506,7 +509,7 @@
 		  @media (max-width: 580px) {
 		    padding-bottom: 4px;
 		  }
-			
+
 
 		}
 
@@ -516,7 +519,7 @@
 				@media (max-width: 1140px) {
 			    padding-right: 20px;
 				}
-			
+
 
 			&_left {
 				width: 44.5%;
@@ -664,7 +667,7 @@
 		@media (max-width: 580px) {
 	    padding: 14px 15px 10px;
 		}
-		
+
 	}
 
 	&__banner-title {
@@ -721,7 +724,7 @@
 
 		@media (max-width: 900px) and (min-width: 601px) {
       padding: 84px 25px 58px;
-		} 
+		}
 
 		@media (max-width: 580px) {
 	    padding: 46px 15px;
@@ -744,7 +747,7 @@
 		@media (max-width: 600px) {
     	top: 124px;
 		}
-		
+
 		&_prev,
 		&_next {
 			background-image: none;
@@ -816,7 +819,7 @@
 		@media (max-width: 600px) {
 			font-size: 30px;
 			line-height: 42px;
-		}		
+		}
 
 		@media (max-width: 580px) {
 	    font-size: 24px;
@@ -847,7 +850,7 @@
 
 		@media (max-width: 400px) {
 			font-size: 14.5px;
-		}		
+		}
 
 		&.active {
 			display: block;
@@ -902,7 +905,7 @@
 			@media (max-width: 600px) and (min-width: 581px) {
 		    width: auto;
 			}
-			
+
       &.services-net-municipality__frame {
         display: block;
         position: static;
@@ -977,11 +980,11 @@
 	@media (max-width: 900px) and (min-width: 601px) {
 		padding: 43px 25px 100px;
 	}
-	
+
 	@media (max-width: 580px) {
 		padding: 21px 15px 100px;
 	}
-	
+
 	&__title {
 		font-size: 24px;
 		font-weight: 500;
@@ -1036,7 +1039,7 @@
 
 		@media (max-width: 400px) {
 			font-size: 14.5px;
-		}	
+		}
 
 	}
 
@@ -1060,7 +1063,7 @@
 	    margin-top: 6px;
     }
 
-	}	
+	}
 
 	&__requisites {
 		@include clearfix;
@@ -1069,11 +1072,11 @@
     @media (max-width: 900px) and (min-width: 601px) {
 			margin-top: 58px;
     }
-	
+
     @media (max-width: 580px) {
 			margin-top: 31px;
     }
-		
+
 	}
 
 	&__data {
@@ -1114,7 +1117,7 @@
     @media (max-width: 900px) and (min-width: 601px) {
 			font-size: 24px;
     }
-		
+
     @media (max-width: 900px) {
 			display: block;
     }
@@ -1212,21 +1215,21 @@
     @media (max-width: 580px) {
   		margin-top: 28px;
     }
-		
+
 		& > a {
 	    font-weight: 700;
 			text-decoration: none;
-	    
+
 	    @media (max-width: 900px) {
-	     font-size: 24px!important; 
-	     padding: 0 44px!important; 
-	     line-height: 68px!important; 
+	     font-size: 24px!important;
+	     padding: 0 44px!important;
+	     line-height: 68px!important;
 	    }
 
 	    @media (max-width: 640px) {
 				padding: 0 35px!important;
 	    }
-			
+
 	    @media (max-width: 600px) {
 				padding: 0 30px!important;
 		    font-size: 14px!important;
@@ -1284,7 +1287,7 @@
     	height: 68px;
     	font-size: 26px;
     }
-		
+
     .selectbox__select, .selectbox__val {
     	padding: 0 10px;
 
@@ -1292,7 +1295,7 @@
 		    padding: 0 20px;
 		    font-size: 26px;
 		    line-height: 66px;
-	    }			
+	    }
 
     }
 
@@ -1300,10 +1303,10 @@
     	/*ie default select hide*/
       height: calc(100% + 1px);
       border-bottom: 1px solid #acacac;
-    	
+
 	    @media (max-width: 900px) and (min-width: 601px) {
 				width: 64px;
-	    }			
+	    }
 
 			span {
 		    @media (max-width: 900px) and (min-width: 601px) {
